more changes made

--- a/index.html
+++ b/index.html
@@ -744,13 +744,13 @@
             <li class="contact-item">
               <ion-icon name="mail-outline"></ion-icon>
 
-              <a href="mailto:info.tourly.com" class="contact-link">info.tourly.com</a>
+              <a href="mailto:info.y.com" class="contact-link">info.easytrip.com</a>
             </li>
 
             <li class="contact-item">
               <ion-icon name="location-outline"></ion-icon>
 
-              <address>3146 Koontz, California</address>
+              <address>784028, Tezpur</address>
             </li>
 
           </ul>
